<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/flower"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sys_name"
        android:textColor="@color/teal_200"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/et_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="用户名"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="密码"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/et_1"
        app:layout_constraintRight_toRightOf="@id/et_1"
        app:layout_constraintTop_toBottomOf="@+id/et_1"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/mBtnLogin"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/login"
        android:textSize="20dp"
        app:backgroundTint="#7888DD"
        app:layout_constraintLeft_toLeftOf="@id/et_2"
        app:layout_constraintRight_toRightOf="@id/et_2"
        app:layout_constraintTop_toBottomOf="@id/et_2" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forget_passwd"
        android:textSize="15dp"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="@id/mBtnLogin"
        app:layout_constraintRight_toRightOf="@id/mBtnLogin"
        app:layout_constraintTop_toBottomOf="@id/mBtnLogin" />
    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/regist"
        android:textSize="15dp"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="@id/mBtnLogin"
        app:layout_constraintRight_toRightOf="@id/mBtnLogin"
        app:layout_constraintTop_toBottomOf="@id/mBtnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>